--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -91,6 +91,7 @@ $(window).load(function() {
     domutil.setselect("#c_uc31swyear2to", yearlist);
     domutil.setselect("#c_uc12year", yearlist);
     domutil.setselect("#c_uc21year", yearlist);
+    domutil.setselect("#c_uc23year", yearlist);
 
 	//if(domutil.getradiovalue("#c_uc32_per")!="days")
 	//	$("#c_uc32_daterange").hide();	
