--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -80,7 +80,7 @@ $(window).load(function() {
 	domutil.setselect("#c_uc32styear",yearlist);
 	domutil.setselect("#c_uc32_seasonyear",yearlist);
 
-    //Added by Chris Pantazis to load the same yearlist to UC 03.01 templates
+    //Added by Chris Pantazis to load the same yearlist to all templates
     domutil.setselect("#c_uc31endyear", yearlist);
     domutil.setselect("#c_uc31endyear2", yearlist);
     domutil.setselect("#c_uc31styear", yearlist);
@@ -92,6 +92,7 @@ $(window).load(function() {
     domutil.setselect("#c_uc12year", yearlist);
     domutil.setselect("#c_uc21year", yearlist);
     domutil.setselect("#c_uc23year", yearlist);
+    domutil.setselect("#c_uc22year", yearlist);
 
 	//if(domutil.getradiovalue("#c_uc32_per")!="days")
 	//	$("#c_uc32_daterange").hide();	
