Added a field ("Dryer") to the household settings form. Needs adding to the live DB before it will work.

--- a/unexe/templates/households.html
+++ b/unexe/templates/households.html
@@ -569,6 +569,9 @@
 					</label>
 					<label class="checkbox-inline">
 					  <input type="checkbox" id="inlineCheckbox3" value="option3" name="drip_irrigation_or_sprinkler_timers"{% if checkboxes.drip_irrigation_or_sprinkler_timers == 1 %}{%trans " checked" %}{% endif %}> Drip irrigation or Sprinkler timers
+					</label>	
+					<label class="checkbox-inline">
+					  <input type="checkbox" id="inlineCheckbox7" value="option7" name="dryer"{% if checkboxes.dryer == 1 %}{%trans " checked" %}{% endif %}> Dryer
 					</label>																				
 				    </div> 			  
 			  </div>			  			  		    				
