--- a/unexe/templates/dashboard.html
+++ b/unexe/templates/dashboard.html
@@ -107,14 +107,23 @@ $(window).load(function() {
 		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Energy Analysis" %} <span class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu" id="energyusecase">
                 <li><a href="#energy1-1" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC1.1: Monitoring of Energy Consumption" %}</a></li>
-                <li><a href="#cuc21" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1: Energy consumption related to water" %}</a></li>
-                <li><a href="#cuc22" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.2: Per appliance energy consumption related to water" %}</a></li>
-                <li><a href="#cuc23" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.3: Carbon emmisions related to water" %}</a></li>
-				<li><a href="#cuc41" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC4.1 & Use Case C_UC5.4 (Compare energy pattern & Forecast the component of energy bill)" %}</a></li>
-				<!-- <li><a href="#cuc54" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.4 (Forecast the component of next energy bill associated with water consumption)" %}</a></li> -->												
+                {% if not user.is_staff and not user.is_superuser %}
+                    <li><a href="#cuc21" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.1: Energy consumption related to water" %}</a></li>
+                    <li><a href="#cuc22" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.2: Per appliance energy consumption related to water" %}</a></li>
+                    <li><a href="#cuc23" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC2.3: Carbon emmisions related to water" %}</a></li>
+                    <li><a href="#cuc41" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC4.1 & Use Case C_UC5.4 (Compare energy pattern & Forecast the component of energy bill)" %}</a></li>
+                    <!-- <li><a href="#cuc54" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC5.4 (Forecast the component of next energy bill associated with water consumption)" %}</a></li> -->
+                {% endif %}
 			</ul>
 		</li>
         {% endif %}
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tint"></span> {% trans "Device Controls" %} <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu" id="waterusecase">
+                {% if not user.is_staff and not user.is_superuser %}
+                    <li><a href="#cuc61" data-toggle="tab"><span class="glyphicon glyphicon-tint"></span> {% trans "Use Case C_UC6.1 (Direct Control of Water Consumption)" %}</a></li>
+                {% endif %}
+            </ul>
+        </li>
 		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-cog"></span> {% trans "Settings" %} <span class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu" id="settings">
 				<!-- 2 in the javascript method is the index of the menu tab -->
@@ -175,6 +184,10 @@ $(window).load(function() {
 
             <div class="tab-pane tabcontent" id="cuc12">
                 {% include "uc_01_2_index.html" %}
+            </div>
+
+            <div class="tab-pane tabcontent" id="cuc61">
+                {% include "uc_06_1_index.html" %}
             </div>
 
             <div class="tab-pane tabcontent" id="cuc21">
