message for user to update HH settings. Minor bug fixes

--- a/unexe/templates/households.html
+++ b/unexe/templates/households.html
@@ -600,8 +600,9 @@
 			   		<button class="btn btn-lg btn-primary col-md-5" type="button" onClick="apputil.sendToserver('#household-form');"><span class="glyphicon glyphicon-floppy-disk"></span>{% trans " Submit" %}</button>
 			  </div>			   		
 			  </div>
-			  			  			  
- 		   </form>			
+
+ 		   </form>
 		   </div>
+                <div id="household-msg-bottom"></div>
 		   </div> <!-- household-panel -->
 {% endblock %}		   
