--- a/uc_06_1/templates/_devices_.html
+++ b/uc_06_1/templates/_devices_.html
@@ -8,13 +8,13 @@
             {% for socket in sockets %}
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 style="color: #444; font-style: bold;">{{ socket.label }}</h3>
+                        <h3 style="color: #444; font-weight: Bold;">{{ socket.label }}</h3>
                     </div>
                     <div class="col-md-2">
                         <h3 style="color: #444">{{ socket.consumption }} kWh</h3>
                     </div>
                     <div class="col-md-4">
-                        <button type="button" id="id_{{ socket.name }}" class="btn btn-lg btn-primary device-buttons" onClick="toggleAndFetchDeviceList('sockets', '{{ username }}', '{{ socket.name }}', '{{ socket.state }}');">
+                        <button type="button" id="id_{{ socket.name }}" class="btn btn-lg btn-primary device-buttons" onClick="toggleAndFetchDeviceList('sockets', '{{ username }}', '{{ socket.name }}', '{{ socket.next }}');">
                             <span class="glyphicon glyphicon-signal"></span> {% trans "Switch " %} {{ socket.next }}
                         </button>
                     </div>
